--- a/WebApplication5/Views/Shared/_DeleteModal.cshtml
+++ b/WebApplication5/Views/Shared/_DeleteModal.cshtml
@@ -6,7 +6,7 @@
     <div class="modal-card">
         <header class="modal-card-head">
             <h2 class="modal-card-title">Delete @Model.DomainName?</h2>
-            <button class="delete cancel-modal-trigger" data-target="#answer-update-modal" aria-label="close"></button>
+            <button class="delete cancel-modal-trigger" data-target="delete-modal-@Model.DomainName" aria-label="close"></button>
         </header>
         <section class="modal-card-body">
             <div class="content-section mt-2">
@@ -14,6 +14,7 @@
                     @Html.AntiForgeryToken()
 
                     <input type="submit" name="submit" class="button is-danger" value="Delete" />
+                    <input type="hidden" name="id" id="id" value="@Model.ResourceId" />
                 </form>
             </div>
         </section>
