--- a/WebApplication5/Views/Shared/_Layout.cshtml
+++ b/WebApplication5/Views/Shared/_Layout.cshtml
@@ -15,7 +15,11 @@
     <header>
         <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a class="navbar-item" style="font-size:1.5rem; font-weight:700;" asp-area="" asp-controller="Home" asp-action="Index">Stack Overflow Clone</a>
+                <a class="navbar-item" asp-controller="Home" asp-action="Index">
+                    <img src="~/logo.png">
+                </a>
+
+@*                 <a class="navbar-item" style="font-size:1.5rem; font-weight:700;" asp-area="" asp-controller="Home" asp-action="Index">Stack Overflow Clone</a> *@
                 <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
@@ -25,7 +29,6 @@
             <div class="navbar-menu">
                 <div class="navbar-start">
                     
-                    <a class="navbar-item text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
                 </div>
 
                 <div class="navbar-item ml-auto mr-auto">
@@ -42,8 +45,8 @@
                     @if (User.Claims.Any())
                     {
                         <div class="navbar-nav flex-grow-2 navbar-item">
-                            <a class="button navbar-link is-arrowless" asp-area="" asp-controller="Profile" asp-action="Details" asp-route-id="@User.FindFirst("ID").Value">Profile</a>
-                            <a class="navbar-link is-arrowless" asp-area="" asp-controller="Profile" asp-action="Logout">Logout</a>
+                            <a class="button navbar-link has-background-link is-arrowless mr-2" asp-area="" asp-controller="Profile" asp-action="Details" asp-route-id="@User.FindFirst("ID").Value">Profile</a>
+                            <a class="button navbar-link has-background-black is-arrowless" asp-area="" asp-controller="Profile" asp-action="Logout">Logout</a>
                         </div>
                     }
                     else
@@ -74,6 +77,10 @@
             <a class="gr-footer-item" href="https://github.com/gh-lutheravery">Github Page</a>
             <a class="gr-footer-item" href="mailto:lutheravery64@gmail.com" title="contact@lutheravery64@gmail.com">Contact</a>
     </footer>
+
+    <script type="text/javascript" src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <script type="text/javascript" src="~/js/site.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
