--- a/WebApplication5/Views/Question/QuestionAnswer.cshtml
+++ b/WebApplication5/Views/Question/QuestionAnswer.cshtml
@@ -76,19 +76,19 @@
         <h2 class="title is-3">@Model.Answers.Count Answers</h2>
 
         <ul id="answer-list">
-            @foreach (var ans in Model.Answers)
+            @for (int index = 0; index < Model.Answers.Count; index++)
             {
                 <li>
-                    <article class="media mt-5 box has-background-white" style="align-items: stretch; ">
+                    <article answer-ajax-id="@Model.Answers[index].Id" id="answer-original-vote-count-@Model.Answers[index].VoteCount" class="answer-container media mt-5 box has-background-white" style="align-items: stretch; ">
                         <figure class="media-left" style="padding-top: .5rem;">
                             <div class="d-flex flex-column media-rows">
                                 <!-- use bootstrap icons for up/down arrows -->
-                                <span class="vote">
-                                    <button class="button ans-up-vote"><i class="bi bi-arrow-up-circle-fill"></i></button>
+                                <span class="vote ans-up-vote">
+                                    <button class="button"><i class="bi bi-arrow-up-circle-fill"></i></button>
                                 </span>
-                                <span class="vote-count ml-auto mr-auto"><strong>@ans.VoteCount</strong></span>
-                                <span class="vote">
-                                    <button class="button ans-down-vote"><i class="bi bi-arrow-down-circle-fill"></i></button>
+                                <span class="ans-vote-count ml-auto mr-auto">@Model.Answers[index].VoteCount</span>
+                                <span class="vote ans-down-vote">
+                                    <button class="button"><i class="bi bi-arrow-down-circle-fill"></i></button>
                                 </span>
                             </div>
                         </figure>
@@ -97,30 +97,30 @@
                         <div class="media-content">
                             <div class="mb-4">
                                 <p>
-                                    <div class="content post-view soc-answer">@Html.Raw(ans.Content)</div>
+                                    <div class="content post-view soc-answer">@Html.Raw(Model.Answers[index].Content)</div>
                                 </p>
                             </div>
 
                             <nav class="level is-mobile media">
                                 <div class="level-left">
-                                    @Html.ActionLink(ans.Author.Name, "Details", "Profile", routeValues: new { @id=ans.Author.Id },
+                                    @Html.ActionLink(Model.Answers[index].Author.Name, "Details", "Profile", routeValues: new { @id=Model.Answers[index].Author.Id },
                                         htmlAttributes: new { @class="mr-4 level-item" })
 
-                                    <small class="text-muted ml-auto level-item">Created at:  @ans.DateCreated</small>
+                                    <small class="text-muted ml-auto level-item">Created at:  @Model.Answers[index].DateCreated</small>
                                 </div>
 
-                                @if (User.Claims.Any(c => c.Value == ans.Author.Id.ToString()))
+                                @if (User.Claims.Any(c => c.Value == Model.Answers[index].Author.Id.ToString()))
                                 {
-                                    Model.ClientAnswerId = ans.Id;
-                                    Model.AnswerUpdateForm.OriginalAnswerContent = ans.Content;
+                                    Model.ClientAnswerId = Model.Answers[index].Id;
+                                    Model.AnswerUpdateForm.OriginalAnswerContent = Model.Answers[index].Content;
 
                                     <div class="level-right">
-                                        <button type="button" class="button is-link" data-target="answer-update-modal">Update</button>
+                                        <button type="button" class="button is-link mr-2 open-modal-trigger" data-target="answer-update-modal">Update</button>
                                         @Html.Partial("~/Views/Answer/_AnswerUpdate.cshtml", Model.AnswerUpdateForm)
 
-                                        <button type="button" class="button is-danger" data-target="@deleteAnswerModalName">Delete</button>
+                                        <button type="button" class="button is-danger open-modal-trigger" data-target="@deleteAnswerModalName">Delete</button>
                                         @Html.Partial("~/Views/Shared/_DeleteModal.cshtml", new DeleteModalViewModel()
-                                            { Action="AnswerDelete", DomainName="Answer", Controller="Answer", ResourceId=ans.Id } )
+                                            { Action="AnswerDelete", DomainName="Answer", Controller="Answer", ResourceId=Model.Answers[index].Id } )
                                     </div>
                                 }
                             </nav>
@@ -137,13 +137,13 @@
         <span class="mb-2">
             @Html.Partial("~/Views/Shared/_AskQuestion.cshtml")
         </span>
-        <h1 class="subtitle is-3 mt-5">Tags used in this post</h1>
+        <h1 class="subtitle is-3 mt-5">Search tags used in this post</h1>
         <div class="list-unstyled media-rows">
             @foreach (var tag in Model.Question.Tags)
             {
                 <div class="field">
-                    <span class="badge rounded-pill has-background-link text-bg-dark tag is-info">
-                        @tag.Title
+                    <span class="badge rounded-pill has-background-link text-bg-dark tag is-info is-medium">
+                        <a class="has-text-white" asp-controller="Home" asp-action="Search" asp-route-searchQuery="tag:@tag.Title" asp-route-pageNumber="1">@tag.Title</a>
                     </span>
                 </div>
             }
@@ -175,7 +175,10 @@
 
         function handleNewAnswerSubmit() {
             document.getElementById('quill-new-answer-content').value = JSON.stringify(newAnswerQuill.getContents());
-            document.getElementById('quill-new-answer-truncated-content').value = newAnswerQuill.getText().slice(0, 167) + "...";
+
+            let cleanedText = slicePostContent(newAnswerQuill.getText());
+            document.getElementById('quill-new-answer-truncated-content').value = cleanedText + '...';
+
             document.getElementById('associated-question-id').value = @Model.Question.Id;
         }
     </script>
@@ -193,6 +196,105 @@
             }
         </script>
     }
+
+    <script>
+        // Functions for voting
+
+        $('#ques-up-vote').click(function () {
+            handleQuestionVote($(this), "bg-so", 1);
+        });
+
+        $('#ques-down-vote').click(function () {
+            handleQuestionVote($(this), "bg-downvote", -1);
+        });
+
+        $('.ans-up-vote').click(function () {
+            handleAnswerVote($(this), "bg-so", 1);
+        });
+
+        $('.ans-down-vote').click(function () {
+            handleAnswerVote($(this), "bg-downvote", -1);
+        });
+
+        // changes html value and color on voting, and sends request to api
+        function handleQuestionVote($element, colorClass, incrementBy) {
+            let $voteCountElement = $('#ques-vote-count');
+            incrementQuestionVoteCount($voteCountElement, incrementBy);
+
+            $element.toggleClass(colorClass);
+
+            // $.ajax({
+            //     url: '@Url.Action("UpdateVote", "Question")',
+            //     method: 'POST',
+            //     data: { id: @Model.Question.Id, incrementBy: incrementBy },
+            //     contentType: "application/json; charset=utf-8",
+            //     dataType: "json",
+            //     error: function () {
+            //         console.log('Error voting post.');
+            //     }
+            // });
+            
+        }
+
+        function handleAnswerVote($element, colorClass, incrementBy) {
+            // let voteContainer = $element.parent();
+            // let voteCountEl = voteContainer.children('.ans-vote-count')[0];
+
+            incrementAnswerVoteCount($element, incrementBy);
+            const ajaxId = $element.attr('answer-ajax-id');
+            
+            $element.toggleClass(colorClass);
+
+            // $.ajax({
+            //     url: '@Url.Action("UpdateVote", "Answer")',
+            //     method: 'POST',
+            //     data: { id: ajax-id, incrementBy: incrementBy },
+            //     contentType: "application/json; charset=utf-8",
+            //     dataType: "json",
+            //     error: function () {
+            //         console.log('Error voting post.');
+            //     }
+            // });
+            
+        }
+
+        // changes vote count and checks for voting more than once
+        function incrementAnswerVoteCount($element, incrementBy) {
+            const originalVoteCountId = $element.closest('.answer-container').attr('id');
+            const originalVoteCountStr = originalVoteCountId.split('answer-original-vote-count-')[1];
+            const originalVoteCount = Number(originalVoteCountStr);
+
+            $currentVoteElement = $element.closest('.ans-vote-count');
+            console.log($currentVoteElement.text())
+            let currentVoteCount = Number($currentVoteElement.text());
+
+            if (currentVoteCount + incrementBy > originalVoteCount + 1)
+                incrementBy = -1;
+
+            else if (currentVoteCount + incrementBy < originalVoteCount - 1)
+                incrementBy = 1;
+
+            console.log(incrementBy, currentVoteCount)
+            $currentVoteElement.text(
+                String(currentVoteCount + incrementBy)
+            );
+        }
+
+        function incrementQuestionVoteCount($element, incrementBy) {
+            const originalVoteCount = @Model.Question.VoteCount;
+            let currentVoteCount = Number($element.text());
+
+            if (currentVoteCount + incrementBy > originalVoteCount + 1)
+                incrementBy = -1;
+
+            else if (currentVoteCount + incrementBy < originalVoteCount - 1)
+                incrementBy = 1;
+
+            $element.text(
+                String(currentVoteCount + incrementBy)
+            );
+        }
+    </script>
 }
 
 
