--- a/WebApplication5/Views/Profile/_ProfileUpdate.cshtml
+++ b/WebApplication5/Views/Profile/_ProfileUpdate.cshtml
@@ -22,7 +22,7 @@
         <div class="field">
             <label class="label" for="bio" name="UpdatedProfile.Bio">Bio</label>
             <div class="control">
-                <textarea rows="4" cols="50" asp-for="@Model.UpdatedProfile.Bio">@Model.CurrentProfile.Bio</textarea>
+                <textarea asp-for="@Model.UpdatedProfile.Bio">@Model.CurrentProfile.Bio</textarea>
             </div>
         </div>
 
