--- a/WebApplication5/Views/Profile/Login.cshtml
+++ b/WebApplication5/Views/Profile/Login.cshtml
@@ -8,18 +8,26 @@
         @Html.AntiForgeryToken()
 
         <div class="field">
-            <label class="label" for="email">Email</label>
+            <label class="label" for="Email">Email</label>
             <div class="control">
-                <input class="input" type="text" name="email" asp-for="Email"/>
+                <input class="input" type="text" name="Email" asp-for="Email"/>
             </div>
         </div>
 
         <div class="field">
             <label class="label" for="Password">Password</label>
             <div class="control">
-                <input class="input" type="text" name="Password" asp-for="Password" />
+                <input class="input" type="password" name="Password" asp-for="Password" />
             </div>
         </div>
+
+        @if (!Html.ViewData.ModelState.IsValid || ViewData["IncorrectInput"] != null)
+        {
+            <div class="notification is-warning " role="alert">
+                @ViewData["IncorrectInput"]
+                @Html.ValidationSummary()
+            </div>
+        }
 
         <div class="field is-grouped">
             <div class="control">
