--- a/WebApplication5/Views/Question/QuestionAnswer.cshtml
+++ b/WebApplication5/Views/Question/QuestionAnswer.cshtml
@@ -76,19 +76,19 @@
         <h2 class="title is-3">@Model.Answers.Count Answers</h2>
 
         <ul id="answer-list">
-            @for (int index = 0; index < Model.Answers.Count; index++)
+            @foreach (var answer in Model.Answers)
             {
                 <li>
-                    <article answer-ajax-id="@Model.Answers[index].Id" id="answer-original-vote-count-@Model.Answers[index].VoteCount" class="answer-container media mt-5 box has-background-white" style="align-items: stretch; ">
+                    <article class="answer-container media mt-5 box has-background-white" style="align-items: stretch; ">
                         <figure class="media-left" style="padding-top: .5rem;">
                             <div class="d-flex flex-column media-rows">
                                 <!-- use bootstrap icons for up/down arrows -->
-                                <span class="vote ans-up-vote">
-                                    <button class="button"><i class="bi bi-arrow-up-circle-fill"></i></button>
+                                <span class="vote">
+                                    <button class="button" disabled><i class="bi bi-arrow-up-circle-fill"></i></button>
                                 </span>
-                                <span class="ans-vote-count ml-auto mr-auto">@Model.Answers[index].VoteCount</span>
-                                <span class="vote ans-down-vote">
-                                    <button class="button"><i class="bi bi-arrow-down-circle-fill"></i></button>
+                                <span class="ml-auto mr-auto">@answer.VoteCount</span>
+                                <span class="vote">
+                                    <button class="button" disabled><i class="bi bi-arrow-down-circle-fill"></i></button>
                                 </span>
                             </div>
                         </figure>
@@ -97,22 +97,22 @@
                         <div class="media-content">
                             <div class="mb-4">
                                 <p>
-                                    <div class="content post-view soc-answer">@Html.Raw(Model.Answers[index].Content)</div>
+                                    <div class="content post-view soc-answer">@Html.Raw(answer.Content)</div>
                                 </p>
                             </div>
 
                             <nav class="level is-mobile media">
                                 <div class="level-left">
-                                    @Html.ActionLink(Model.Answers[index].Author.Name, "Details", "Profile", routeValues: new { @id=Model.Answers[index].Author.Id },
+                                    @Html.ActionLink(answer.Author.Name, "Details", "Profile", routeValues: new { @id=answer.Author.Id },
                                         htmlAttributes: new { @class="mr-4 level-item" })
 
-                                    <small class="text-muted ml-auto level-item">Created at:  @Model.Answers[index].DateCreated</small>
+                                    <small class="text-muted ml-auto level-item">Created at:  @answer.DateCreated</small>
                                 </div>
 
-                                @if (User.Claims.Any(c => c.Value == Model.Answers[index].Author.Id.ToString()))
+                                @if (User.Claims.Any(c => c.Value == answer.Author.Id.ToString()))
                                 {
-                                    Model.ClientAnswerId = Model.Answers[index].Id;
-                                    Model.AnswerUpdateForm.OriginalAnswerContent = Model.Answers[index].Content;
+                                    Model.ClientAnswerId = answer.Id;
+                                    Model.AnswerUpdateForm.OriginalAnswerContent = answer.Content;
 
                                     <div class="level-right">
                                         <button type="button" class="button is-link mr-2 open-modal-trigger" data-target="answer-update-modal">Update</button>
@@ -120,7 +120,7 @@
 
                                         <button type="button" class="button is-danger open-modal-trigger" data-target="@deleteAnswerModalName">Delete</button>
                                         @Html.Partial("~/Views/Shared/_DeleteModal.cshtml", new DeleteModalViewModel()
-                                            { Action="AnswerDelete", DomainName="Answer", Controller="Answer", ResourceId=Model.Answers[index].Id } )
+                                            { Action="AnswerDelete", DomainName="Answer", Controller="Answer", ResourceId=answer.Id } )
                                     </div>
                                 }
                             </nav>
@@ -208,14 +208,6 @@
             handleQuestionVote($(this), "bg-downvote", -1);
         });
 
-        $('.ans-up-vote').click(function () {
-            handleAnswerVote($(this), "bg-so", 1);
-        });
-
-        $('.ans-down-vote').click(function () {
-            handleAnswerVote($(this), "bg-downvote", -1);
-        });
-
         // changes html value and color on voting, and sends request to api
         function handleQuestionVote($element, colorClass, incrementBy) {
             let $voteCountElement = $('#ques-vote-count');
@@ -223,61 +215,17 @@
 
             $element.toggleClass(colorClass);
 
-            // $.ajax({
-            //     url: '@Url.Action("UpdateVote", "Question")',
-            //     method: 'POST',
-            //     data: { id: @Model.Question.Id, incrementBy: incrementBy },
-            //     contentType: "application/json; charset=utf-8",
-            //     dataType: "json",
-            //     error: function () {
-            //         console.log('Error voting post.');
-            //     }
-            // });
+            $.ajax({
+                url: '@Url.Action("UpdateVote", "Question")',
+                method: 'POST',
+                data: { id: @Model.Question.Id, incrementBy: incrementBy },
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                error: function () {
+                    console.log('Error voting post.');
+                }
+            });
             
-        }
-
-        function handleAnswerVote($element, colorClass, incrementBy) {
-            // let voteContainer = $element.parent();
-            // let voteCountEl = voteContainer.children('.ans-vote-count')[0];
-
-            incrementAnswerVoteCount($element, incrementBy);
-            const ajaxId = $element.attr('answer-ajax-id');
-            
-            $element.toggleClass(colorClass);
-
-            // $.ajax({
-            //     url: '@Url.Action("UpdateVote", "Answer")',
-            //     method: 'POST',
-            //     data: { id: ajax-id, incrementBy: incrementBy },
-            //     contentType: "application/json; charset=utf-8",
-            //     dataType: "json",
-            //     error: function () {
-            //         console.log('Error voting post.');
-            //     }
-            // });
-            
-        }
-
-        // changes vote count and checks for voting more than once
-        function incrementAnswerVoteCount($element, incrementBy) {
-            const originalVoteCountId = $element.closest('.answer-container').attr('id');
-            const originalVoteCountStr = originalVoteCountId.split('answer-original-vote-count-')[1];
-            const originalVoteCount = Number(originalVoteCountStr);
-
-            $currentVoteElement = $element.closest('.ans-vote-count');
-            console.log($currentVoteElement.text())
-            let currentVoteCount = Number($currentVoteElement.text());
-
-            if (currentVoteCount + incrementBy > originalVoteCount + 1)
-                incrementBy = -1;
-
-            else if (currentVoteCount + incrementBy < originalVoteCount - 1)
-                incrementBy = 1;
-
-            console.log(incrementBy, currentVoteCount)
-            $currentVoteElement.text(
-                String(currentVoteCount + incrementBy)
-            );
         }
 
         function incrementQuestionVoteCount($element, incrementBy) {
