--- a/WebApplication5/Views/Question/QuestionAnswer.cshtml
+++ b/WebApplication5/Views/Question/QuestionAnswer.cshtml
@@ -84,11 +84,11 @@
                             <div class="d-flex flex-column media-rows">
                                 <!-- use bootstrap icons for up/down arrows -->
                                 <span class="vote">
-                                    <button class="button" disabled><i class="bi bi-arrow-up-circle-fill"></i></button>
+                                    <button class="button"><i class="bi bi-arrow-up-circle-fill"></i></button>
                                 </span>
                                 <span class="ml-auto mr-auto">@answer.VoteCount</span>
                                 <span class="vote">
-                                    <button class="button" disabled><i class="bi bi-arrow-down-circle-fill"></i></button>
+                                    <button class="button"><i class="bi bi-arrow-down-circle-fill"></i></button>
                                 </span>
                             </div>
                         </figure>
@@ -211,16 +211,17 @@
         // changes html value and color on voting, and sends request to api
         function handleQuestionVote($element, colorClass, incrementBy) {
             let $voteCountElement = $('#ques-vote-count');
-            incrementQuestionVoteCount($voteCountElement, incrementBy);
+            const newincrementBy = incrementQuestionVoteCount($voteCountElement, incrementBy);
 
             $element.toggleClass(colorClass);
+
+            //const reqObj = { id: @Model.Question.Id, incrementBy: newincrementBy };
 
             $.ajax({
                 url: '@Url.Action("UpdateVote", "Question")',
                 method: 'POST',
-                data: { id: @Model.Question.Id, incrementBy: incrementBy },
-                contentType: "application/json; charset=utf-8",
-                dataType: "json",
+                data: '=' + @Model.Question.Id + ',' + String(newincrementBy),
+                contentType: "application/x-www-form-urlencoded; charset=UTF-8",
                 error: function () {
                     console.log('Error voting post.');
                 }
@@ -241,6 +242,7 @@
             $element.text(
                 String(currentVoteCount + incrementBy)
             );
+            return incrementBy;
         }
     </script>
 }
