post content fix

--- a/WebApplication5/Views/Question/QuestionAnswer.cshtml
+++ b/WebApplication5/Views/Question/QuestionAnswer.cshtml
@@ -20,7 +20,7 @@
 
 <div class="row align-items-start columns">
     <div class="col-7 mr-2 column is-three-quarters">
-        <article class="media mt-5 box has-background-white" style="align-items: stretch; ">
+        <article class="media mt-5 box has-background-white" style="align-items: stretch; overflow: scroll;">
             <figure class="media-left" style="padding-top: .5rem;">
                 <div class="d-flex flex-column media-rows">
                     <!-- use bootstrap icons for up/down arrows -->
@@ -79,7 +79,7 @@
             @foreach (var answer in Model.Answers)
             {
                 <li>
-                    <article class="answer-container media mt-5 box has-background-white" style="align-items: stretch; ">
+                    <article class="answer-container media mt-5 box has-background-white" style="align-items: stretch; overflow: scroll;">
                         <figure class="media-left" style="padding-top: .5rem;">
                             <div class="d-flex flex-column media-rows">
                                 <!-- use bootstrap icons for up/down arrows -->
