--- a/WebApplication5/Views/Home/LandingPage.cshtml
+++ b/WebApplication5/Views/Home/LandingPage.cshtml
@@ -3,9 +3,10 @@
         <div class="mr-2 column">
             <div id="landing-text" class="">
                 <h1 class="title is-1">Learn something new</h1>
-                <button>Explore</button>
+                <h2 class="subtitle" style="margin-bottom:0.5rem">Visit the place to share programming knowledge, and better understand software.</h2>
+                <a class="button is-rounded bg-so" asp-controller="Home" asp-action="Index">Explore</a>
             </div>
-            
+
         </div>
         <div class="mr-2 column is-7">
             <img id="landing-img" src="~/vecteezy_studying-and-learning-online-concept_1270244.svg" alt="Man studying" />
@@ -24,11 +25,11 @@
         }
 
         /* .vertical-center {
-            margin: 0;
-            position: absolute;
-            top: 50%;
-            -ms-transform: translateY(-50%);
-            transform: translateY(-50%);
-        } */
+                    margin: 0;
+                    position: absolute;
+                    top: 50%;
+                    -ms-transform: translateY(-50%);
+                    transform: translateY(-50%);
+                } */
     </style>
 }
